<?xml version="1.0"?>
<package>
  <name>serial_radar</name>
  <version>0.0.0</version>
  <description>The serial_radar package</description>

  <maintainer email="xu325504@hotmail.com">pzx</maintainer>
  <license>BSD</license>
  <author email="xu325504@hotmail.com">PZX</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
